# gfs-log-manager

./: COPYING  LICENSE  README.md  README_install_package.md  pyproject.toml
run/: Dockerfile  Dockerfile-base  Dockerfile-base-opt  Dockerfile-build-opt  Dockerfile-tests  Dockerfile-tests-opt  README_DOCKER_RUN.md  README_GCP_SA_CREATION.md
src/: requirements.txt  setup.py  start.py
src/app/: __init__.py
src/app/errors/: handlers.py
src/app/glog_manager/: __init__.py
src/app/main/: forms.py  routes.py
src/app/templates/: _logging_demo.html  base.html
src/app/templates/errors/: 401.html  403.html
src/app/templates/main/: index.html
src/config/: __init__.py
src/glog_manager/: __init__.py
tests/: tests.py
