[project]
name = "gfs_log_manager"
version = "0.1.2"
authors = [
  { name = "Antonio Mesones", email="amesones_dev@outlook.com" },
]
description = "A simple Google Cloud logging manager"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Topic :: System :: Logging",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
